--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,44 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
+      p {
+        color: black;
+        font-size: 0.9rem;
+        width: 80%;
+        font-family: 'Montserrat', sans-serif;
+        text-align: center;
+      }
+      .btn {
+        box-sizing: border-box;
+        appearance: none;
+        background-color: transparent;
+        border: 2px solid red;
+        border-radius: 0.6em;
+        color: red;
+        cursor: pointer;
+        display: flex;
+        align-self: center;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1;
+        margin: 20px;
+        padding: 1.2em 2.8em;
+        text-decoration: none;
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+      }
+      .third {
+        border-color: blue;
+        color: #fff;
+        box-shadow: 0 0 40px 40px blue inset, 0 0 0 0 blue;
+        transition: all 150ms ease-in-out;
       }
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
+    <p>Presione este boton cuando haya completado todos los campos necesarios para cargar una nueva tarjeta</p> 
+    <button class="btn third" id="enableButton">Habilitar boton "Siguiente"</button>
     <script src="popup.js"></script>
   </body>
 </html>
